--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.43.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "sass": "^1.58.3",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
