--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "react-hook-form": "^7.43.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "react-slick": "^0.29.0",
     "sass": "^1.58.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-slick": "^0.23.10",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
