--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "node-sass": "^8.0.0",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-redux": "^8.0.5",
