--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "node-sass": "^8.0.0",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
-    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-input-slider": "^6.0.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-slick": "^0.29.0",
