--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "json-loader": "^0.5.7",
     "lodash": "^4.17.21",
     "node-sass": "^8.0.0",
     "notistack": "^2.0.8",
