--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_BASE_URL=https://blogger-8e4f.onrender.com
+# REACT_APP_BASE_URL=https://blogger-8e4f.onrender.com
 
-# "http://localhost:5005"
+REACT_APP_BASE_URL=http://localhost:5005
 
 
